# flowsta-private-dna

./: CONTRIBUTING.md  README.md  SECURITY.md
v1.0/: VERSION_README.md  build.sh  dna.yaml  happ.yaml
v1.0/zomes/private_data/coordinator/: Cargo.toml
v1.0/zomes/private_data/coordinator/src/: lib.rs
v1.0/zomes/private_data/integrity/src/: lib.rs
v1.1/: VERSION_README.md  build.sh  dna.yaml  happ.yaml
v1.10/: build.sh  dna.yaml  happ.yaml
v1.10/workdir/: dna.yaml  happ.yaml
v1.10/zomes/private_data/coordinator/src/: lib.rs
v1.10/zomes/private_data/integrity/src/: lib.rs
v1.11/: .gitignore  README.md  build.sh  dna.yaml  happ.yaml
v1.11/zomes/private_data/coordinator/src/: lib.rs
v1.11/zomes/private_data/integrity/: Cargo.toml
v1.11/zomes/private_data/integrity/src/: lib.rs
v1.3/: VERSION_README.md  build.sh  dna.yaml  happ.yaml
v1.3/zomes/private_data/coordinator/src/: lib.rs
v1.4/: VERSION_README.md  build.sh  dna.yaml  happ.yaml
v1.4/zomes/private_data/coordinator/src/: lib.rs
v1.5/: VERSION_README.md  build.sh  dna.yaml  happ.yaml
v1.6/: VERSION_README.md  build.sh
v1.6/workdir/: dna.yaml  happ.yaml
v1.7/: Cargo.toml  VERSION_README.md
v1.7/workdir/: dna.yaml  happ.yaml
v1.7/zomes/private_data/coordinator/src/: lib.rs
v1.8/: VERSION_README.md  build.sh  dna.yaml  happ.yaml
v1.8/workdir/: dna.yaml  happ.yaml
v1.9/: Cargo.toml  VERSION_README.md  build.sh  dna.yaml  happ.yaml
v1.9/workdir/: dna.yaml  happ.yaml
v1.9/zomes/private_data/coordinator/src/: lib.rs
v1.9/zomes/private_data/integrity/src/: lib.rs
(+5 files in other folders)
